# rust-split-dns-resolver

./: Cargo.toml  dns_performance_test.sh  servers.toml
.devcontainer/: devcontainer.json
src/: dns_client.rs  dns_server.rs  main.rs  parse_args.rs  read_toml.rs  server.rs  utils.rs
